--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "teachr",
+  "description": "UF office hour tracking app.",
   "version": "0.6.0",
   "meanjs-version": "0.6.0",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "meanies",
   "license": "MIT",
   "repository": {
     "type": "git",
