--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "merge-descriptors": "^1.0.1",
     "mocha": "^5.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.6.1",
