--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "author": "Medhir Bhargava",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
     "multer": "^1.3.1",
+    "nodemon": "^1.18.6",
     "request": "^2.67.0",
     "unirest": "^0.5.1"
   },
