--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "morgan": "^1.6.1",
     "multer": "^1.3.1",
     "nodemon": "^1.18.6",
+    "passport": "^0.4.0",
     "request": "^2.67.0",
     "unirest": "^0.5.1"
   },
