--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "event-stream": "3.3.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^4.2.9",
     "morgan": "^1.6.1",
     "multer": "^1.3.1",
