--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Medhir Bhargava",
   "license": "MIT",
   "dependencies": {
+    "angular-ui-bootstrap": "^2.5.6",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "merge-descriptors": "^1.0.1",
