--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "angular-ui-bootstrap": "^2.5.6",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "jsonwebtoken": "^8.4.0",
     "merge-descriptors": "^1.0.1",
     "mocha": "^5.2.0",
     "mongoose": "^4.13.17",
