--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^5.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.6.1",
+    "nodemon": "^1.18.7",
     "request": "^2.67.0"
   },
   "devDependencies": {
