--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^4.13.17",
     "morgan": "^1.6.1",
     "nodemon": "^1.18.7",
-    "request": "^2.67.0"
+    "request": "^2.67.0",
+    "unirest": "^0.5.1"
   },
   "devDependencies": {
     "should": "^7.1.1",
